--- a/languages/sh/jq/jq.org
+++ b/languages/sh/jq/jq.org
@@ -200,35 +200,37 @@ MODNAME::FUNCTION;
 |-------------------+--------------------------------------|
 
 **   array functions
-|-------------------------+---------------------------------+-------------------|
-|           <c>           |               <c>               |        <c>        |
-|           in            |             filter              |        out        |
-|-------------------------+---------------------------------+-------------------|
-|        [2,4,6,8]        |             length              |         4         |
-|        [2,4,6,8]        |           indices(8)            |        [3]        |
-|        [2,4,6,8]        |          contains([2])          |       true        |
-|        [2,4,6,8]        |             reverse             |     [8,6,4,2]     |
-|        [8,4,6,2]        |              sort               |     [2,4,6,8]     |
-|        [2,4,6,8]        |               min               |         2         |
-|        [2,4,6,8]        |               max               |         8         |
-|        [2,4,6,8]        |               add               |        20         |
-|      ["foo","bar"]      |               add               |     "foobar"      |
-|   [{foo: 1, bar: 2}]    |               add               | {foo: 1, bar: 2}  |
-| [72,101,108,108,111,33] |             implode             |     "Hello!"      |
-|        [2,4,6,8]        |              first              |         2         |
-|        [2,4,6,8]        |              last               |         8         |
-|        [2,4,6,8]        |             nth(2)              |         6         |
-|        [2,4,6,8]        |           map(. * 10)           |   [20,40,60,80]   |
-|                         |            join(",")            |                   |
-|        [1,2,3,4]        |           any(. >= 4)           |       true        |
-|        [1,2,3,4]        |           all(. >= 4)           |       false       |
-|           [1]           |           to_entries            | [{key:0,value:1}] |
-|      [10,20,30,40]      |              keys               |     [0,1,2,3]     |
-|-------------------------+---------------------------------+-------------------|
-|                         | reduce stream as $var (init;fn) |                   |
-|      [10,20,30,40]      |  reduce .[] as $n (0; . + $n)   |        100        |
-|    ["A","B","C","D"]    | reduce .[] as $e ([]; [$e] + .) | ["D","C","B","A"] |
-|-------------------------+---------------------------------+-------------------|
+|-------------------------+---------------------------------+-------------------------|
+|           <c>           |               <c>               |           <c>           |
+|           in            |             filter              |           out           |
+|-------------------------+---------------------------------+-------------------------|
+|        [2,4,6,8]        |             length              |            4            |
+|        [2,4,6,8]        |           indices(8)            |           [3]           |
+|        [2,4,6,8]        |          contains([2])          |          true           |
+|        [2,4,6,8]        |             reverse             |        [8,6,4,2]        |
+|        [8,4,6,2]        |              sort               |        [2,4,6,8]        |
+|        [2,4,6,8]        |               min               |            2            |
+|        [2,4,6,8]        |               max               |            8            |
+|        [2,4,6,8]        |               add               |           20            |
+|      ["foo","bar"]      |               add               |        "foobar"         |
+|   [{foo: 1, bar: 2}]    |               add               |    {foo: 1, bar: 2}     |
+| [72,101,108,108,111,33] |             implode             |        "Hello!"         |
+|        [2,4,6,8]        |              first              |            2            |
+|        [2,4,6,8]        |              last               |            8            |
+|        [2,4,6,8]        |             nth(2)              |            6            |
+| {name: "Jane", age: 21} |         map(.age += 1)          | {name: "Jane", age: 22} |
+|        [2,4,6,8]        |           map(. * 10)           |      [20,40,60,80]      |
+|                         |            join(",")            |                         |
+| {name: "Jane", age: 1}  |        select(.age > 18)        |           []            |
+|        [1,2,3,4]        |           any(. >= 4)           |          true           |
+|        [1,2,3,4]        |           all(. >= 4)           |          false          |
+|           [1]           |           to_entries            |    [{key:0,value:1}]    |
+|      [10,20,30,40]      |              keys               |        [0,1,2,3]        |
+|-------------------------+---------------------------------+-------------------------|
+|                         | reduce stream as $var (init;fn) |                         |
+|      [10,20,30,40]      |  reduce .[] as $n (0; . + $n)   |           100           |
+|    ["A","B","C","D"]    | reduce .[] as $e ([]; [$e] + .) |    ["D","C","B","A"]    |
+|-------------------------+---------------------------------+-------------------------|
 
 - in the reduce fn
   - (.) is the accumulator
@@ -275,22 +277,23 @@ https://jqlang.github.io/jq/manual/v1.7/#math
 **  object functions
 
 |----------------------------+--------------------------------------------------+-----------------------------|
-|                            | filter                                           | out                         |
+|                            |                       <c>                        |                             |
+|                            |                      filter                      | out                         |
 |----------------------------+--------------------------------------------------+-----------------------------|
-| [{"a": 1, "b": 2, "c": 3}] | .[]                                              | [1,2,3]                     |
-| {"a": 1, "b": 2, "c": 3}   | flatten                                          | [1,2,3]                     |
-| {"a": 1, "b": 2, "c": 3}   | keys                                             | ["a","b","c"]               |
-| {"a": 1, "b": 2, "c": 3}   | keys_unsorted                                    | ["a","c","b"]               |
-| {"a": 1, "b": 2, "c": 3}   | has("a")                                         | true                        |
-| "a"                        | in({...})                                        | true                        |
-| {"a": 1, "b": 2, "c": 3}   | add                                              | 6                           |
+| [{"a": 1, "b": 2, "c": 3}] |                       .[]                        | [1,2,3]                     |
+| {"a": 1, "b": 2, "c": 3}   |                     flatten                      | [1,2,3]                     |
+| {"a": 1, "b": 2, "c": 3}   |                       keys                       | ["a","b","c"]               |
+| {"a": 1, "b": 2, "c": 3}   |                  keys_unsorted                   | ["a","c","b"]               |
+| {"a": 1, "b": 2, "c": 3}   |                     has("a")                     | true                        |
+| "a"                        |                    in({...})                     | true                        |
+| {"a": 1, "b": 2, "c": 3}   |                       add                        | 6                           |
 |----------------------------+--------------------------------------------------+-----------------------------|
-| {"a": 1, "b": 2, "c": 3}   | del(.a)                                          | {"b":2, "c":3}              |
-| {"a": 1, "b": 2, "c": 3}   | to_entries                                       | [{"key":"a","value":1},...] |
-| [{"key":"a","value":1}]    | from_entries                                     | {"a":1}                     |
+| {"a": 1, "b": 2, "c": 3}   |                     del(.a)                      | {"b":2, "c":3}              |
+| {"a": 1, "b": 2, "c": 3}   |                    to_entries                    | [{"key":"a","value":1},...] |
+| [{"key":"a","value":1}]    |                   from_entries                   | {"a":1}                     |
 | {"Jane": 42}               | with_entries({key:(.value¦tostring),value:.key}) | {"42","Jane"}               |
-| {"first": "jane"}          | map_values(ascii_upcase)                         | {first: "JANE"}             |
-| [{foo:1},{foo:2}]          | group_by(.foo)                                   | [[{foo:1}],[{foo:2}]]       |
+| {"first": "jane"}          |             map_values(ascii_upcase)             | {first: "JANE"}             |
+| [{foo:1},{foo:2}]          |                  group_by(.foo)                  | [[{foo:1}],[{foo:2}]]       |
 |----------------------------+--------------------------------------------------+-----------------------------|
 
 - with_entries(filter), is equivalent to:
@@ -333,56 +336,58 @@ https://jqlang.github.io/jq/manual/v1.7/#math
 | path(..) ¦ map(tostring) ¦ join("/")                  | instant schema                                    |
 |-------------------------------------------------------+---------------------------------------------------|
 
-|---------------------+---------------------------+----------------------+-------------------------------------|
-| input               | filter                    | output               | description                         |
-|---------------------+---------------------------+----------------------+-------------------------------------|
-| 42                  | .                         | 42                   | "identity"                          |
-| 99                  | 42                        | 42                   | "constant"                          |
-| {}                  | .color                    | null                 | "projection", dot notation          |
-| {color: "red"}      | .color                    | "red"                |                                     |
-| {color: "red"}      | .["color"]                |                      |                                     |
-| {color: "red"}      | "woah"                    | "woah"               |                                     |
-| {color: "red"}      | .color = "pink"           | {color: "pink"}      |                                     |
-| "color"             | {(.): "red"}              | {color: "red"}       |                                     |
-| [86, 99, 13]        | .[1]                      | 99                   |                                     |
-| [86, 99, 13]        | .[1+1]                    | 13                   |                                     |
-| [86, 99, 13]        | .[1:2]                    | [99]                 | slice, 1 = inclusive, 2 = exclusive |
-| {"k":1,"v":[8,9]}   | .v[1]                     | 9                    |                                     |
-| {"k":1,"v":[8,9]}   | .v[ .["k"] ]              | 9                    |                                     |
-| [86, 99, 13]        | .[] + 1                   | 87, 100, 14          |                                     |
-| [86, 99, 13]        | .[] ¦ . + 1               | 87, 100, 14          |                                     |
-| [86, 99, 13]        | [ . + 1 ]                 | [87, 100, 14]        |                                     |
-| 86, 99, 13          | . + 1                     | 87, 100, 14          |                                     |
-| 86, 99, 13          | [ . + 1 ]                 | [87], [100], [14]    |                                     |
-| 5                   | . * 2, . + 3, . / 5       | 10, 8, 1             |                                     |
-| [range(10)]         | map(select(. % 2 == 0))   | [0,2,4,6,8]          |                                     |
-| [range(10) ¦        | select(. % 2 == 0) ]      | [0,2,4,6,8]          |                                     |
-| [{}, true, {"a":1}] | .[] ¦ .a?                 | null, 1              | optional operator                   |
-| ["1","invalid",4]   | .[] ¦ tonumber?           | 1, 4                 |                                     |
-|---------------------+---------------------------+----------------------+-------------------------------------|
-| [86, 99, 13]        | .[]                       | 86, 99, 13           |                                     |
-|---------------------+---------------------------+----------------------+-------------------------------------|
-| {"name":"john"      | .[]                       | "john", "kaos"       |                                     |
-| ,"org":"kaos"}      |                           |                      |                                     |
-|---------------------+---------------------------+----------------------+-------------------------------------|
-| [86, 99, 13]        | length as $count          | 66                   | declaring variables with *as*       |
-|                     | ¦ add / $count            |                      |                                     |
-|---------------------+---------------------------+----------------------+-------------------------------------|
-| [86, 99, 13]        | . as [$a,$b,$c] ¦ $c + 3  | 16                   | as array destructuring              |
-| {"name": "john"}    | . as {name: $n} ¦ $n      | "john"               | as object destructuring             |
-| {"name": "john"}    | . as {$name}    ¦ $name   | "john"               | as object destructuring short       |
-|---------------------+---------------------------+----------------------+-------------------------------------|
-| {"agent":86         | .org = "CONTROL"          | {"agent":86          | add + update                        |
-| ,"name":"max"}      | ¦ .name ¦= ascii_upcase   | ,"name":"MAX"        |                                     |
-|                     |                           | ,"org":"CONTROL"}    |                                     |
-|---------------------+---------------------------+----------------------+-------------------------------------|
-| {"size": 34.6       | if ((.size¦floor)%2) == 0 | "even"               | 1.6 - must have an ELSE             |
-| ,"weight": 24.1}    | then "even"               |                      | 1.7 - ELSE defaults to .            |
-|                     | else "odd"                |                      |                                     |
-|                     | end                       |                      |                                     |
-|---------------------+---------------------------+----------------------+-------------------------------------|
-| {"name":"John"      | "\(.name), Agent \(.nr)"  | "John, Agent 86"     | string interpolation                |
-| ,"nr":"86"}         |                           |                      |                                     |
-|---------------------+---------------------------+----------------------+-------------------------------------|
-| {"name":"john"}     | + {"age": 18}             | {name:"john",age:18} |                                     |
-|---------------------+---------------------------+----------------------+-------------------------------------|
+|---------------------+---------------------------+----------------------+-------------------------------------------|
+| input               | filter                    | output               | description                               |
+|---------------------+---------------------------+----------------------+-------------------------------------------|
+|                     | ..                        |                      | recursive identity, from self to values   |
+| 42                  | .                         | 42                   | "identity"                                |
+| 99                  | 42                        | 42                   | "constant"                                |
+| {}                  | .color                    | null                 | "projection", dot notation                |
+| {color: "red"}      | .color                    | "red"                |                                           |
+| {color: "red"}      | .["color"]                |                      |                                           |
+| {color: "red"}      | "woah"                    | "woah"               |                                           |
+| {color: "red"}      | .color = "pink"           | {color: "pink"}      | creates or updates a property             |
+| {color: "red"}      | {tint: .color}            | {tint: "red"}        | creates a new object with an old property |
+| "color"             | {(.): "red"}              | {color: "red"}       |                                           |
+| [86, 99, 13]        | .[1]                      | 99                   |                                           |
+| [86, 99, 13]        | .[1+1]                    | 13                   |                                           |
+| [86, 99, 13]        | .[1:2]                    | [99]                 | slice, 1 = inclusive, 2 = exclusive       |
+| {"k":1,"v":[8,9]}   | .v[1]                     | 9                    |                                           |
+| {"k":1,"v":[8,9]}   | .v[ .["k"] ]              | 9                    |                                           |
+| [86, 99, 13]        | .[] + 1                   | 87, 100, 14          |                                           |
+| [86, 99, 13]        | .[] ¦ . + 1               | 87, 100, 14          |                                           |
+| [86, 99, 13]        | [ . + 1 ]                 | [87, 100, 14]        |                                           |
+| 86, 99, 13          | . + 1                     | 87, 100, 14          |                                           |
+| 86, 99, 13          | [ . + 1 ]                 | [87], [100], [14]    |                                           |
+| 5                   | . * 2, . + 3, . / 5       | 10, 8, 1             | multiple selectors?                       |
+| [range(10)]         | map(select(. % 2 == 0))   | [0,2,4,6,8]          |                                           |
+| [range(10) ¦        | select(. % 2 == 0) ]      | [0,2,4,6,8]          |                                           |
+| [{}, true, {"a":1}] | .[] ¦ .a?                 | null, 1              | optional operator                         |
+| ["1","invalid",4]   | .[] ¦ tonumber?           | 1, 4                 |                                           |
+|---------------------+---------------------------+----------------------+-------------------------------------------|
+| [86, 99, 13]        | .[]                       | 86, 99, 13           |                                           |
+|---------------------+---------------------------+----------------------+-------------------------------------------|
+| {"name":"john"      | .[]                       | "john", "kaos"       |                                           |
+| ,"org":"kaos"}      |                           |                      |                                           |
+|---------------------+---------------------------+----------------------+-------------------------------------------|
+| [86, 99, 13]        | length as $count          | 66                   | declaring variables with *as*             |
+|                     | ¦ add / $count            |                      |                                           |
+|---------------------+---------------------------+----------------------+-------------------------------------------|
+| [86, 99, 13]        | . as [$a,$b,$c] ¦ $c + 3  | 16                   | as array destructuring                    |
+| {"name": "john"}    | . as {name: $n} ¦ $n      | "john"               | as object destructuring                   |
+| {"name": "john"}    | . as {$name}    ¦ $name   | "john"               | as object destructuring short             |
+|---------------------+---------------------------+----------------------+-------------------------------------------|
+| {"agent":86         | .org = "CONTROL"          | {"agent":86          | add + update                              |
+| ,"name":"max"}      | ¦ .name ¦= ascii_upcase   | ,"name":"MAX"        |                                           |
+|                     |                           | ,"org":"CONTROL"}    |                                           |
+|---------------------+---------------------------+----------------------+-------------------------------------------|
+| {"size": 34.6       | if ((.size¦floor)%2) == 0 | "even"               | 1.6 - must have an ELSE                   |
+| ,"weight": 24.1}    | then "even"               |                      | 1.7 - ELSE defaults to .                  |
+|                     | else "odd"                |                      |                                           |
+|                     | end                       |                      |                                           |
+|---------------------+---------------------------+----------------------+-------------------------------------------|
+| {"name":"John"      | "\(.name), Agent \(.nr)"  | "John, Agent 86"     | string interpolation                      |
+| ,"nr":"86"}         |                           |                      |                                           |
+|---------------------+---------------------------+----------------------+-------------------------------------------|
+| {"name":"john"}     | + {"age": 18}             | {name:"john",age:18} |                                           |
+|---------------------+---------------------------+----------------------+-------------------------------------------|
