--- a/languages/sh/self.org
+++ b/languages/sh/self.org
@@ -1,5 +1,21 @@
+- force LC_LOCALE=C to avoid any kind of locale error
+- before runs when benchmarking https://linux-mm.org/Drop_Caches
+  - $ echo ? > /proc/sys/vm/drop_cache
+    - 1 for  pagecache
+    - 2 for  dentries + inodes
+    - 3 for  pagecache + dentries + inodes
+
+
+- find
+  - -ok, is like -exec, but ask user before running
+
+
 - tool: awk like in cli, with haskell flavor https://github.com/gelisam/hawk
 - tool: json to grep-able format https://github.com/tomnomnom/gron
 - tool: shell https://www.nushell.sh/
 - tool: language+shell https://github.com/refaktor/rye
+- tool: language http://www.rseventeen.com/ https://github.com/matthewnourse/r17
 - tools: https://github.com/jlevy/the-art-of-command-line/blob/master/README.md
+
+- article 06 | https://ridiculousfish.com/blog/posts/old-age-and-treachery.html
+- article 17 | http://www.pixelbeat.org/docs/unix-parallel-tools.html
