--- a/languages/sh/awk/awk.org
+++ b/languages/sh/awk/awk.org
@@ -8,6 +8,7 @@
 | mawk      | https://web.archive.org/web/20240202023335/https://invisible-island.net/mawk/ |
 | gawk      | https://www.gnu.org/software/gawk/                                            |
 | goawk     | https://github.com/benhoyt/goawk                                              |
+| bioawk    | https://github.com/lh3/bioawk                                                 |
 |-----------+-------------------------------------------------------------------------------|
 
 - coverage
@@ -284,21 +285,28 @@ https://www.gnu.org/software/gawk/manual/html_node/Format-Modifiers.html
 
 
 * codebases
-|---------------------+----------------------------------------------|
-| graphics demo       | https://github.com/patsie75/awk-demo         |
-| system logs parsing | https://github.com/kaworu/hawk               |
-| CHIP-8              | https://github.com/patsie75/awk-chip8        |
-| game tetris         | https://github.com/mikkun/AWKTC              |
-| toy lang compiler   | https://cowlark.com/mercat/com.awk.txt       |
-| git                 | https://github.com/djanderson/aho            |
-|---------------------+----------------------------------------------|
-| exercises           | https://github.com/exercism/awk              |
-| exercises           | https://github.com/kaworu/adventofcode-2015/ |
-| exercises           | https://github.com/ferd/advent-of-code-2021/ |
-| exercises           | https://github.com/phillbush/aoc             |
-|---------------------+----------------------------------------------|
-
-
+|---------------------+-----------------------------------------------|
+| graphics demo       | https://github.com/patsie75/awk-demo          |
+| graphics libs       | https://github.com/patsie75/awk-glib          |
+| CHIP-8              | https://github.com/patsie75/awk-chip8         |
+| system logs parsing | https://github.com/kaworu/hawk                |
+| game tetris         | https://github.com/mikkun/AWKTC               |
+| git                 | https://github.com/djanderson/aho             |
+| json                | https://github.com/step-/JSON.awk             |
+| webserver           | https://github.com/crossbowerbt/awk-webserver |
+| static site gen     | https://github.com/nuex/zodiac                |
+| svg from git        | https://github.com/deuill/grawkit             |
+| jvm                 | https://github.com/rethab/awk-jvm             |
+| toy lang compiler   | https://cowlark.com/mercat/com.awk.txt        |
+|---------------------+-----------------------------------------------|
+| libs                | https://github.com/e36freak/awk-libs          |
+| libs                | https://github.com/dubiousjim/awkenough       |
+|---------------------+-----------------------------------------------|
+| exercises           | https://github.com/exercism/awk               |
+| exercises           | https://github.com/kaworu/adventofcode-2015/  |
+| exercises           | https://github.com/ferd/advent-of-code-2021/  |
+| exercises           | https://github.com/phillbush/aoc              |
+|---------------------+-----------------------------------------------|
 * snippets
 - wEiRd - removes leading space
   #+begin_src awk
